@@ -1,4 +1,4 @@
-dnl  PowerPC-64 mpn_addlsh1_n and mpn_sublsh1_n.
+dnl  PowerPC-64 mpn_addlsh2_n and mpn_sublsh2_n.
 
 dnl  Copyright 2003, 2005, 2009, 2010 Free Software Foundation, Inc.
 
@@ -27,26 +27,26 @@ C POWER4/PPC970:     2		(2.0 c/l should be possible)
 C POWER5:	     ?
 
 
-define(LSH,		1)
-define(RSH,		63)
+define(LSH,		2)
+define(RSH,		62)
 
-ifdef(`OPERATION_addlsh1_n',`
+ifdef(`OPERATION_addlsh2_n',`
   define(ADDSUBC,	addc)
   define(ADDSUBE,      	adde)
   define(INITCY,      	`addic $1, r1, 0')
   define(RETVAL,      	`addze  r3, $1')
-  define(func, mpn_addlsh1_n)
+  define(func, mpn_addlsh2_n)
 ')
-ifdef(`OPERATION_sublsh1_n',`
+ifdef(`OPERATION_sublsh2_n',`
   define(ADDSUBC,	subfc)
   define(ADDSUBE,      	subfe)
   define(INITCY,      	`addic $1, r1, -1')
   define(RETVAL,      	`subfze  r3, $1
 			neg	r3, r3')
-  define(func, mpn_sublsh1_n)
+  define(func, mpn_sublsh2_n)
 ')
 
 
-MULFUNC_PROLOGUE(mpn_addlsh1_n mpn_sublsh1_n)
+MULFUNC_PROLOGUE(mpn_addlsh2_n mpn_sublsh2_n)
 
 include_mpn(`powerpc64/mode64/aorslshC_n.asm')
